[package]
name = "cri"
version = "0.1.0"
authors = ["Isaac Diamond <isaacd9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
tonic = "0.3.1"
# Only necessary if using Protobuf well-known types:
prost-types = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }

[build-dependencies]
prost-build = "0.6"
tonic-build = "0.3.1"
