[package]
name = "cri"
version = "0.1.0"
authors = ["Isaac Diamond <isaacd9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
tonic = "0.3.1"
# Only necessary if using Protobuf well-known types:
prost-types = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
log = "0.4"
simple_logger = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[build-dependencies]
prost-build = "0.6"
tonic-build = "0.3.1"
